# aitest-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  ROADMAP.md  pyproject.toml
.agents/plugins/: marketplace.json
.agents/skills/doc-review/: SKILL.md
.agents/skills/emitter-build/: SKILL.md
.agents/skills/knowledge-build/: SKILL.md
.agents/skills/test-codegen/: SKILL.md
.agents/skills/test-design/: SKILL.md
.agents/skills/test-fix/: SKILL.md
.agents/skills/test-scaffold/: SKILL.md
.claude/: settings.local.json
.claude/skills/doc-gen/: SKILL.md
.claude/skills/emitter-build/: SKILL.md  project_context.md
.claude/skills/knowledge-build/: SKILL.md
.claude/skills/test-codegen/: SKILL.md  project_context.md
.claude/skills/test-design/: SKILL.md
.claude/skills/test-fix/: SKILL.md
.claude/skills/test-maintain/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_project_migration.yml
.github/workflows/: ci.yml  publish.yml
ab_experiment_sdk/: README.md  README.zh-CN.md  __init__.py  client.py  models.py  remote_client.py  service.py
ab_experiment_sdk/data/: experiments.json  whitelist.json
aitest_config/: aitest.yaml  config.yaml  project_config.yaml
aitest_config/refs/: assertion-strategy.md  case-format.md  config-files.md  l1-template.md
aitest_config/schemas/: codegen_profile.schema.json
aitest_kit/: cli.py  doctor.py  init_workspace.py  runtime_variables.py  upgrade_workspace.py  workspace.py  workspace_config.py
aitest_kit/codegen/: case_flow_planner.py  cli.py  emitter.py  health.py  ir.py  ir_renderer.py  module_runner.py  module_type.py  parser.py  planner.py  profile.py  profile_schema.py  profile_validation_report.py  profile_validator.py  profile_variables.py  project_config.py  promotion.py  render_utils.py  suite.py  suite_runner.py  suite_target.py
aitest_kit/helpers/: __init__.py  grpc_ops.py  http.py
aitest_kit/registry/: __init__.py  cli.py  loader.py  models.py  path_resolver.py  selection.py  task_loader.py
aitest_kit/report/: __init__.py  classifier.py  cli.py  codegen_check.py  collector.py  paths.py  renderer.py  sanitizer.py  task_runner.py
aitest_kit/templates/: __init__.py
cases/old-cases/: ab_remote_client.md
config/: autotest.yaml
coupon_system/: __init__.py  http_app.py  main.py
coupon_system/config/: __init__.py  calibration.json  experiments.json  scene_experiments.json  scenes.json  settings.yaml
coupon_system/data/: item_features.tsv
coupon_system/protos/: coupon.proto  coupon_pb2.py  coupon_pb2_grpc.py  scoring.proto  scoring_pb2.py  scoring_pb2_grpc.py
coupon_system/scoring_server/: external_mock_server.py  mock_server.py
coupon_system/services/: calibrator.py  coarse_ranker.py  coupon_service.py  experiment.py  feature_store.py  grpc_servicer.py  model_service.py  redis_store.py  scene_router.py  scoring_client.py
docs/: 0401.md  0402.md  service_startup.md  test_flywheel_vision.md
docs/ab_experiment_sdk/: integration_guide.md
docs/coupon_system/: coupon_system_dataflow_v3.md  coupon_system_overview.md  coupon_system_overview_v3.md
docs/discount_system/: public_api_doc.md
docs/prd/: 0403.md  0404_calibration.md  0404_coarse_rank.md  0405.md  0405_ab_service.md  0406.md  plan.md
docs/usebook/: aitest_getting_started.md  aitest_kit_code_reading_guide.md  aitest_migration_guide.md  aitest_quickstart.md  aitest_workflow_guide.md  codegen_module_fix_log.md  codegen_new_project_migration_playbook.md  codegen_profile_guide.md  codegen_troubleshooting.md  codegen教学.md  coupon_system_dataflow.md  coupon_system_full_example.md  coupon_system_overview_v2.md  pypi_trusted_publishing.md  service_startup.md  test_execution_guide.md  备忘continue.md
examples/: README.md
examples/coupon_system/: README.md
examples/discount_policy/: README.md
plugins/aitest/: README.md
plugins/aitest-kit/: README.md
templates/project_workspace/: .gitignore  CLAUDE.md  README.md
test_workspace/knowledge/: BUILD_INSTRUCTIONS.md  L0_system_architecture.md  TEST_SPEC.md
test_workspace/plans/: aitest_doctor_spec.md  aitest_v0_1_release_spec.md  aitest_workspace_template_spec.md  aitest_workspace_upgrade_spec.md  codegen-flywheel-expansion-strategy.md  codegen_ir_promotion_spec.md  codegen_pipeline_defense_phase1_spec.md  codegen_portability_phase2_spec.md  codegen_profile_subprofiles_spec.md  codegen_target_extension_spec.md  codex-skill-migration-spec.md  codex_plugin_v0_spec.md  config_inventory_phase3.md  github_star_and_codex_plugin_roadmap.md  old_case_migration_spec.md  profile_path_hard_convergence_spec.md  profile_variables_suite_scaffold_spec.md  project_setup_skill_spec.md  registry_maintenance_cli_spec.md  report_path_semantic_refactor_spec.md  suite_runtime_report_promotion_spec.md  target_module_suite_task_refactor_spec.md  template_neutral_skills_spec.md  test-execution-strategy.md  test_result_reporting_phase3_spec.md
test_workspace/results/: ab_experiment_scene_experiments_hot_reload_bug.md  aitest_v0_1_discount_system_migration_acceptance.md  calibration_item_condition_fields_not_supported_bug.md  e2e_unreachable_ab_requires_isolated_main_service.md  scene_routing_fallback_invalid_scene_score_bug.md
test_workspace/tasks/: coupon_smoke.yaml
test_workspace/tests/: cal_whitelist.json  conftest.py
tests/: test_classifier.py  test_codegen_health_report.py  test_codegen_ir.py  test_codegen_planner.py  test_codegen_profile_validator.py  test_codegen_promotion.py  test_codegen_promotion_reports.py  test_codegen_protocol_detection.py  test_codegen_suite_profile.py  test_codegen_suite_target.py  test_collector.py  test_coupon_service.py  test_doctor.py  test_registry_contexts.py  test_registry_maintenance_cli.py  test_renderer.py  test_report_cli.py  test_runtime_variables.py  test_sanitizer.py  test_workspace_config.py  test_workspace_template.py
(+288 files in other folders)
