[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aitest-kit"
version = "0.1.0"
description = "AI-driven automated testing toolkit"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "grpcio-reflection>=1.60",
    "protobuf>=4.25",
    "redis>=5.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "jsonpath-ng>=1.6",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "fakeredis>=2.21",
    "pytest-asyncio>=0.23",
]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "grpcio-reflection>=1.60",
    "redis>=5.0",
]

[project.scripts]
aitest = "aitest_kit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["aitest_kit*", "coupon_system*", "ab_experiment_sdk*"]
