[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aitest-kit"
version = "0.1.2"
description = "AI-assisted testing toolchain: docs → knowledge base → Markdown cases → pytest code → structured reports"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "tlzmw001" },
]
keywords = [
    "ai-testing",
    "automation",
    "pytest",
    "test-codegen",
    "markdown-tests",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "grpcio-reflection>=1.60",
    "protobuf>=4.25",
    "redis>=5.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "jsonpath-ng>=1.6",
    "click>=8.1",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
    "fakeredis>=2.21",
    "pytest-asyncio>=0.23",
]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "grpcio-reflection>=1.60",
    "redis>=5.0",
]

[project.scripts]
aitest = "aitest_kit.cli:main"

[project.urls]
Homepage = "https://github.com/tlzmw001/aitest-kit"
Repository = "https://github.com/tlzmw001/aitest-kit"
Issues = "https://github.com/tlzmw001/aitest-kit/issues"
Changelog = "https://github.com/tlzmw001/aitest-kit/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests", "test_workspace/tests"]
markers = [
    "manual: test requires manual verification (log check, visual inspection, etc.)",
]

[tool.setuptools.packages.find]
include = ["aitest_kit*"]

[tool.setuptools.package-data]
"aitest_kit.templates.project_workspace" = [
    ".gitignore",
    "README.md",
    "AGENTS.md",
    "CLAUDE.md",
    ".agents/skills/*/SKILL.md",
    ".agents/skills/*/refs/*",
    ".claude/skills/*/SKILL.md",
    ".claude/skills/*/refs/*",
    ".codex/skills/README.md",
    ".codex/skills/*/SKILL.md",
    ".codex/skills/*/refs/*",
    "docs/.gitkeep",
    "aitest_config/*.yaml",
    "aitest_config/refs/*.md",
    "aitest_config/schemas/*.json",
    "test_workspace/cases/.gitkeep",
    "test_workspace/casesuites/.gitkeep",
    "test_workspace/knowledge/*.md",
    "test_workspace/knowledge/L1/.gitkeep",
    "test_workspace/knowledge/L2/.gitkeep",
    "test_workspace/plans/.gitkeep",
    "test_workspace/reports/.gitkeep",
    "test_workspace/results/.gitkeep",
    "test_workspace/tests/*.py",
    "test_workspace/tests/fixtures/*.py",
    "test_workspace/tests/generated/*.py",
    "test_workspace/tests/helpers/*.py",
]
